--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,59 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="md_theme_light_primary">#006D39</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#9AF7B4</color>
+    <color name="md_theme_light_onPrimaryContainer">#00210C</color>
+    <color name="md_theme_light_secondary">#506353</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#D2E8D3</color>
+    <color name="md_theme_light_onSecondaryContainer">#0D1F12</color>
+    <color name="md_theme_light_tertiary">#3A646E</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#BEEAF6</color>
+    <color name="md_theme_light_onTertiaryContainer">#001F26</color>
+    <color name="md_theme_light_error">#BA1B1B</color>
+    <color name="md_theme_light_errorContainer">#FFDAD4</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410001</color>
+    <color name="md_theme_light_background">#FBFDF7</color>
+    <color name="md_theme_light_onBackground">#1A1C1A</color>
+    <color name="md_theme_light_surface">#FBFDF7</color>
+    <color name="md_theme_light_onSurface">#1A1C1A</color>
+    <color name="md_theme_light_surfaceVariant">#DCE5DA</color>
+    <color name="md_theme_light_onSurfaceVariant">#414941</color>
+    <color name="md_theme_light_outline">#717971</color>
+    <color name="md_theme_light_inverseOnSurface">#F0F1EC</color>
+    <color name="md_theme_light_inverseSurface">#2E312E</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_primaryInverse">#7FD999</color>
+    <color name="md_theme_dark_primary">#7FD999</color>
+    <color name="md_theme_dark_onPrimary">#003919</color>
+    <color name="md_theme_dark_primaryContainer">#005227</color>
+    <color name="md_theme_dark_onPrimaryContainer">#9AF7B4</color>
+    <color name="md_theme_dark_secondary">#B6CCB8</color>
+    <color name="md_theme_dark_onSecondary">#223526</color>
+    <color name="md_theme_dark_secondaryContainer">#384B3C</color>
+    <color name="md_theme_dark_onSecondaryContainer">#D2E8D3</color>
+    <color name="md_theme_dark_tertiary">#A2CEDA</color>
+    <color name="md_theme_dark_onTertiary">#01363F</color>
+    <color name="md_theme_dark_tertiaryContainer">#204D56</color>
+    <color name="md_theme_dark_onTertiaryContainer">#BEEAF6</color>
+    <color name="md_theme_dark_error">#FFB4A9</color>
+    <color name="md_theme_dark_errorContainer">#930006</color>
+    <color name="md_theme_dark_onError">#680003</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD4</color>
+    <color name="md_theme_dark_background">#1A1C1A</color>
+    <color name="md_theme_dark_onBackground">#E2E3DE</color>
+    <color name="md_theme_dark_surface">#1A1C1A</color>
+    <color name="md_theme_dark_onSurface">#E2E3DE</color>
+    <color name="md_theme_dark_surfaceVariant">#414941</color>
+    <color name="md_theme_dark_onSurfaceVariant">#C1C9BF</color>
+    <color name="md_theme_dark_outline">#8B938A</color>
+    <color name="md_theme_dark_inverseOnSurface">#1A1C1A</color>
+    <color name="md_theme_dark_inverseSurface">#E2E3DE</color>
+    <color name="md_theme_dark_inversePrimary">#006D39</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_primaryInverse">#006D39</color>
+    <color name="seed">#006D39</color>
+    <color name="error">#BA1B1B</color>
 </resources>
