refactor: break methods into smaller ones

--- a/app/src/main/res/layout/fragment_games.xml
+++ b/app/src/main/res/layout/fragment_games.xml
@@ -62,6 +62,12 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/error_group"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:constraint_referenced_ids="error, retry"/>
+
         <TextView
             android:id="@+id/error"
             android:layout_width="0dp"
