--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -59,6 +59,14 @@
             android:layout_height="wrap_content"
             android:padding="16dp">
 
+            <androidx.constraintlayout.widget.Group
+                android:id="@+id/details_group"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                app:constraint_referenced_ids="storyline, summary"
+                tools:visibility="visible" />
+
             <TextView
                 android:id="@+id/storyline"
                 android:layout_width="0dp"
@@ -95,6 +103,13 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <androidx.constraintlayout.widget.Group
+                android:id="@+id/error_group"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                app:constraint_referenced_ids="error, retry"/>
+
             <TextView
                 android:id="@+id/error"
                 android:layout_width="0dp"
@@ -103,7 +118,6 @@
                 android:text="@string/something_went_wrong"
                 android:textAlignment="center"
                 android:textAppearance="?textAppearanceHeadlineSmall"
-                android:visibility="gone"
                 app:layout_constraintBottom_toTopOf="@+id/retry"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -115,7 +129,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/retry"
-                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
