feat: make text bigger just to be easier to scroll

--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -71,7 +71,7 @@
                 android:id="@+id/storyline"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textAppearance="?textAppearanceBodyLarge"
+                android:textAppearance="?textAppearanceHeadlineSmall"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -84,7 +84,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:textAppearance="?textAppearanceBodyLarge"
+                android:textAppearance="?textAppearanceHeadlineSmall"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
