--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/gamesFragment"
-        android:name="com.hijano.games.ui.GamesFragment"
+        android:name="com.hijano.games.ui.games.GamesFragment"
         android:label="fragment_games"
         tools:layout="@layout/fragment_games" >
         <action
